--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,8 @@
   "C_Cpp_Runner.useAddressSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "files.associations": {
-    "string.h": "c"
+    "string.h": "c",
+    "typeinfo": "c"
   },
   "C_Cpp_Runner.msvcWarnings": [
     "/W4",
